--- a/requirements.txt
+++ b/requirements.txt
@@ -19,20 +19,24 @@ Django==4.2.5
 django-cors-headers==4.2.0
 djangorestframework==3.14.0
 drf-spectacular==0.26.5
+exceptiongroup==1.1.3
 filelock==3.12.4
 fonttools==4.43.0
 html5lib==1.1
 idna==3.4
 inflection==0.5.1
+iniconfig==2.0.0
 jmespath==1.0.1
 jsonschema==4.19.1
 jsonschema-specifications==2023.7.1
 lxml==4.9.3
 mysqlclient==2.2.0
 oscrypto==1.3.0
+packaging==23.2
 pathspec==0.10.1
 Pillow==10.0.1
 platformdirs==3.11.0
+pluggy==1.3.0
 pycparser==2.21
 pydyf==0.8.0
 pyHanko==0.20.1
@@ -41,6 +45,8 @@ PyJWT==2.8.0
 pypdf==3.16.2
 pyphen==0.14.0
 pypng==0.20220715.0
+pytest==7.4.2
+pytest-django==4.5.2
 python-bidi==0.4.2
 python-dateutil==2.8.2
 python-dotenv==1.0.0
@@ -57,6 +63,7 @@ sqlparse==0.4.4
 svglib==1.5.1
 termcolor==1.1.0
 tinycss2==1.2.1
+tomli==2.0.1
 typing_extensions==4.8.0
 tzlocal==5.0.1
 uritemplate==4.1.1
